--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 # Pre-commit hooks for code quality and consistency
-# Install: pip install pre-commit && pre-commit install
-# Run manually: pre-commit run --all-files
-# Update hooks: pre-commit autoupdate
+# Install: uv add --dev pre-commit && uv run pre-commit install
+# Run manually: uv run pre-commit run --all-files
+# Update hooks: uv run pre-commit autoupdate
 
 default_language_version:
-  python: python3.11
+  python: python3
 
 repos:
   # General file checks
@@ -38,20 +38,12 @@ repos:
         args: ['--pytest-test-first']
       - id: trailing-whitespace
 
-  # Python code formatting with Black
-  - repo: https://github.com/psf/black
-    rev: 24.10.0
-    hooks:
-      - id: black
-        language_version: python3.11
-        args: ['--config', 'pyproject.toml']
-
-  # Python linting with Ruff (fast!)
+  # Python linting and formatting with Ruff (replaces Black, isort, autoflake, pyupgrade)
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.7.4
     hooks:
       - id: ruff
-        args: ['--fix', '--exit-non-zero-on-fix']
+        args: ['--fix', '--exit-non-zero-on-fix', '--ignore', 'RUF100']
       - id: ruff-format
 
   # Type checking with MyPy
@@ -61,9 +53,12 @@ repos:
       - id: mypy
         additional_dependencies:
           - pandas-stubs>=2.2.3
-          - types-aiofiles>=24.1.0
-          - types-tabulate>=0.9.0
-          - types-pytz>=2024.2
+          - types-aiofiles>=24.1.0.20250822
+          - types-tabulate>=0.9.0.20241207
+          - types-pytz>=2025.2.0.20250809
+          - pydantic>=2.0.0
+          - pydantic-settings>=2.0.0
+          - fastmcp>=0.1.0
         args: ['--config-file', 'pyproject.toml']
         pass_filenames: false
         args: ['src/']
@@ -74,6 +69,7 @@ repos:
     hooks:
       - id: bandit
         args: ['-r', 'src/', '-ll', '-x', 'tests/']
+        pass_filenames: false
 
   # Markdown formatting
   - repo: https://github.com/igorshubovych/markdownlint-cli
@@ -81,44 +77,12 @@ repos:
     hooks:
       - id: markdownlint
         args: ['--fix']
+        exclude: ^(CODE_OF_CONDUCT\.md|CONTRIBUTING\.md|docs/blog/).*
 
-  # YAML formatting
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        types_or: [yaml, json]
-        exclude: ^(.*\.min\.(js|css)|package-lock\.json)$
-
-  # Check for outdated Python syntax
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.19.0
-    hooks:
-      - id: pyupgrade
-        args: ['--py38-plus']
-
-  # Remove unused imports
-  - repo: https://github.com/PyCQA/autoflake
-    rev: v2.3.1
-    hooks:
-      - id: autoflake
-        args:
-          - --in-place
-          - --remove-all-unused-imports
-          - --remove-unused-variables
-          - --remove-duplicate-keys
-          - --ignore-init-module-imports
-
-  # Sort imports
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-        args: ['--profile', 'black', '--line-length', '100']
 
   # Docstring formatting
   - repo: https://github.com/PyCQA/docformatter
-    rev: v1.7.5
+    rev: v1.7.7
     hooks:
       - id: docformatter
         args:
@@ -126,25 +90,7 @@ repos:
           - --wrap-summaries=100
           - --wrap-descriptions=100
 
-  # Check for common security issues
-  - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.5.0
-    hooks:
-      - id: detect-secrets
-        args: ['--baseline', '.secrets.baseline']
 
-  # License headers
-  - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.5.5
-    hooks:
-      - id: insert-license
-        files: \.py$
-        args:
-          - --license-filepath
-          - LICENSE
-          - --comment-style
-          - "#"
-        exclude: ^(tests/|examples/|__pycache__/)
 
 ci:
   autofix_prs: true
