Fix configuration and package reference inconsistencies
- Fix _version.py package name loading from 'csv-editor' to 'databeak'
- Remove Python 3.9 classifier since requires-python is >=3.10
- Update coverage configuration path from csv_editor to databeak

This resolves package loading failures and ensures consistent Python version requirements.

Closes #4, Closes #6, Closes #7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,6 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -277,7 +276,7 @@ omit = [
     "*/tests/*",
     "*/__pycache__/*",
     "*/site-packages/*",
-    "src/csv_editor/__main__.py",
+    "src/databeak/__main__.py",
 ]
 
 [tool.coverage.report]
