feat: enforce branch-based development workflow
- Add pre-commit hook to prevent direct commits to main branch
- Update CLAUDE.md with Git workflow requirements and examples
- Update CONTRIBUTING.md with branch-based development guidelines
- Add Pull Request requirements and conventional commit enforcement
- Update README to emphasize branch-based contribution workflow

This ensures all changes go through proper code review via Pull Requests.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,21 @@ default_language_version:
   python: python3
 
 repos:
+  # Git workflow enforcement
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v3.4.0
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
+        args: [optional, feat, fix, docs, test, refactor, chore, ci, build]
+
+  # Prevent direct commits to main branch
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+    hooks:
+      - id: no-commit-to-branch
+        args: ['--branch', 'main', '--branch', 'master']
+
   # General file checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
