fix: resolve code review issues and clean up pre-commit configuration
- Fix MyPy duplicate args configuration bug (HIGH PRIORITY)
- Update test file to use Path.open() per Ruff requirements
- Clarify HTML in Markdown policy documentation
- Fix auto-formatting issues throughout codebase

All pre-commit hooks now pass correctly with proper MyPy configuration.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -74,9 +74,8 @@ repos:
           - pydantic>=2.0.0
           - pydantic-settings>=2.0.0
           - fastmcp>=0.1.0
-        args: ['--config-file', 'pyproject.toml']
+        args: ['--config-file', 'pyproject.toml', 'src/']
         pass_filenames: false
-        args: ['src/']
 
   # Security checks with Bandit
   - repo: https://github.com/PyCQA/bandit
