feat: add yamllint for comprehensive YAML validation
Add yamllint as a Python-based YAML linter to improve YAML code quality:

Features:
- Comprehensive syntax and style validation
- Configurable rules for project consistency
- Better error detection than basic check-yaml
- Parsable format for editor integration
- Strict mode for high quality standards

Benefits:
- Catches YAML syntax errors early
- Enforces consistent formatting across project
- Integrates with pre-commit workflow
- Provides detailed, actionable error messages

This replaces basic YAML checking with professional-grade validation
suitable for configuration files and documentation.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -85,6 +85,13 @@ repos:
         args: ['-r', 'src/', '-ll', '-x', 'tests/']
         pass_filenames: false
 
+  # YAML linting with yamllint
+  - repo: https://github.com/adrienverge/yamllint
+    rev: v1.37.1
+    hooks:
+      - id: yamllint
+        args: [--format, parsable, --strict]
+
   # Markdown formatting and linting (Python-based)
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.22
