--- a/pyproject.toml
+++ b/pyproject.toml
@@ -189,8 +189,6 @@ select = [
 ]
 ignore = [
     "E501",  # line too long (handled by ruff format)
-    #"B008",  # do not perform function calls in argument defaults
-    #"B905",  # `zip()` without an explicit `strict=` parameter
     "SIM105", # contextlib.suppress is slower that try-except-pass
     "SIM108", # Use ternary operator instead of if-else-block (readability preference)
 ]
@@ -216,7 +214,7 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_any_unimported = false
-disallow_any_explicit = true
+disallow_any_explicit = false
 no_implicit_optional = true
 check_untyped_defs = true
 warn_redundant_casts = true
