--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ dev = [
     "pre-commit>=4.0.0",
     "pandas-stubs>=2.2.3",
     "types-aiofiles>=24.1.0",
+    "types-jsonschema>=4.25.1.20250822",
     "types-tabulate>=0.9.0",
     "types-pytz>=2024.2",
     "ipython>=8.29.0",
@@ -422,6 +423,7 @@ dev = [
     "ty>=0.0.1a21",
     "types-aiofiles>=24.1.0.20250822",
     "types-chardet>=5.0.4.6",
+    "types-jsonschema>=4.25.1.20250822",
     "types-psutil>=7.0.0.20250822",
     "types-pytz>=2025.2.0.20250809",
     "types-tabulate>=0.9.0.20241207",
