--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,7 +69,7 @@ repos:
           - pandas-stubs>=2.2.3
           - types-aiofiles>=24.1.0.20250822
           - types-chardet>=5.0.4.6
-          - types-jsonschema>=4.25.1.20250822,
+          - types-jsonschema>=4.25.1.20250822
           - types-psutil>=7.0.0.20250822
           - types-tabulate>=0.9.0.20241207
           - types-pytz>=2025.2.0.20250809
